<resources>
    <string name="app_name">CL.D</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_record">Record</string>
    <string name="title_community">Community</string>
    <string name="title_profile">Profile</string>
    
    <string name="title_not_exist_badge">앗! 아직 뱃지가 없군요!</string>
    <string name="description_not_exist_badge">미션을 달성할 때마다 뱃지를 획득할 수 있어요!</string>

    <string name="title_record_gym">클라이밍장</string>
    <string name="title_record_sector">섹터</string>
    <string name="title_record_level">난이도 색상</string>
    <string name="title_record_video">영상</string>
    
    <string name="title_search_near_gyms">가까운 암장</string>
    <string name="title_search_favorite_gyms">자주 가는 암장</string>
</resources>